<resources>
    <string name="app_name">OAuthClient</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <string name="string_home_page">首页</string>
    <string name="settings">设置</string>
    <string name="account_manager">账号管理</string>

    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="string_server">服务器</string>
    <string name="login">登陆</string>
    <string name="token_login">请求Token登录</string>
    <string name="register">注册</string>
    <string name="logout">退出登陆</string>
    <string name="not_login">您还未登陆</string>
    <string name="whole_logout">单点退出</string>
    <string name="logout_overall_success">单点退出成功</string>

    <string name="welcome">欢迎你:%s</string>
    <string name="welcome1">这是你第%s次登录</string>

    <string name="username_empty">用户名不能为空!</string>
    <string name="login_success">登录成功</string>
    <string name="rp_login_failed">登录失败</string>
    <string name="register_success">注册成功,已自动登录</string>
    <string name="register_failed">注册失败</string>

    <string name="host_login_timeout">Host登录超时,请重新登录Host!</string>
    <string name="host_user_not_bound">你还未绑定,请先用pinCode登录绑定!</string>
    <string name="request_rp_token_failed_not_login">请求token失败,请先登录Host!</string>
    <string name="has_no_token">你没有token,请先从Host获取</string>
    <string name="rp_user_not_belong_host">请求token不合法!</string>
    <string name="request_token_server_error">IDs处理出错,请重试!</string>
    <string name="facet_id_error">此应用没有权限请求token!</string>
    <string name="request_token_error">请求token失败!</string>
    <string name="unknown_error">未知错误,请重试!</string>

    <string name="username_exist">用户名已存在</string>
    <string name="username_not_exist">用户名不存在!</string>
    <string name="password_error">密码错误!</string>
    <string name="server_error">服务器访问出错,请稍后访问!</string>
    <string name="net_word_error_info">网络连接错误,请检查您的网络!</string>

    <string name="input_username_request_token">输入账号请求Token登录</string>
    <string name="register_tv_input_register">请输入您要注册的用户名与密码</string>
    <string name="input_account_login">输入账号密码登陆</string>
    <string name="request_token_login">请求Token登录</string>
    <string name="no_account">没有账号?点击注册</string>
</resources>
