<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_module"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_account_login"
        android:textColor="@android:color/black"
        android:textSize="@dimen/global_prompt_text_size" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/login_et_server"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/string_server"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"></EditText>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_module2">

        <EditText
            android:id="@+id/login_et_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/account"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"></EditText>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_module2">


        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_following"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_tv_request_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/request_token_login"
            android:textColor="@color/btn_send_normal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/login_bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/no_account"
            android:textColor="@color/btn_send_normal"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>