<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_module2"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_tv_input_register"
        android:textColor="@android:color/black"
        android:textSize="@dimen/global_prompt_text_size" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_module2">

        <EditText
            android:id="@+id/register_et_server"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/string_server"
            android:nextFocusDown="@+id/register_et_account"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_til_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_module2">

        <EditText
            android:id="@+id/register_et_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/account"
            android:nextFocusDown="@+id/register_et_password"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"></EditText>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_module2">

        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_following"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>